# fuss-free-feedback

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 004ef025bf5b_add_inbox_and_message_tables.py
src/: config.py  main.py
src/application/: utils.py
src/application/services/: inbox.py
src/domain/: exceptions.py  repositories.py
src/domain/models/: __init__.py  inbox.py  message.py
src/infrastructure/: logging.py
src/infrastructure/database/: __init__.py  models.py  session.py
src/infrastructure/mappers/: inbox_mapper.py  message_mapper.py
src/infrastructure/repositories/: inbox.py
src/interface/: dependencies.py  exception_handlers.py  schemas.py
src/interface/api/: inboxes.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_inbox_mapper.py  test_inbox_model.py  test_inbox_service.py  test_message_mapper.py
